# algoritmos-rs

./: .gitignore  README.md  crate_create.sh
(1) Estructuras Secuenciales/secuenciales-1/: Cargo.toml
(1) Estructuras Secuenciales/secuenciales-1/src/: main.rs
(1) Estructuras Secuenciales/secuenciales-2/: Cargo.toml
(1) Estructuras Secuenciales/secuenciales-2/src/: main.rs
condicionales/: Cargo.toml
condicionales/src/: 1-10.rs  1-11.rs  1-12.rs  1-13.rs  1-15a.rs  1-15b.rs  1-15c.rs  1-16a.rs  1-16b.rs  1-17.rs  1-18.rs  1-19.rs  1-20.rs  1-21.rs  1-22.rs  1-6.rs  1-7.rs  1-8.rs  1-9.rs
funciones/src/: lib.rs
functions/: Cargo.toml
functions/src/: lib.rs
secuenciales/: Cargo.toml
secuenciales/src/: 1-5-1.rs  1-5-2.rs  1-5-3.rs  1-5-4.rs  1-5-5.rs  1-5-6.rs  1-5-7.rs
subacciones/: Cargo.toml
subacciones/src/: 1-37-1.rs  1-37-10.rs  1-37-11.rs  1-37-12.rs  1-37-2.rs  1-37-3.rs  1-37-4.rs  1-37-5.rs  1-37-6.rs  1-37-7.rs  1-37-8.rs  1-37-9.rs
