[package]
name = "condicionales"
version = "0.1.0"
edition = "2021"

[dependencies]
functions = {path = "../functions"}

[profile.release]
overflow-checks = true

[[bin]]
name = "1-6"
path = "src/1-6.rs"

[[bin]]
name = "1-7"
path = "src/1-7.rs"

[[bin]]
name = "1-8"
path = "src/1-8.rs"

[[bin]]
name = "1-9"
path = "src/1-9.rs"

[[bin]]
name = "1-10"
path = "src/1-10.rs"

[[bin]]
name = "1-11"
path = "src/1-11.rs"

[[bin]]
name = "1-12"
path = "src/1-12.rs"

[[bin]]
name = "1-13"
path = "src/1-13.rs"

[[bin]]
name = "1-14"
path = "src/1-14.rs"

[[bin]]
name = "1-15a"
path = "src/1-15a.rs"

[[bin]]
name = "1-15b"
path = "src/1-15b.rs"

[[bin]]
name = "1-15c"
path = "src/1-15c.rs"

[[bin]]
name = "1-16a"
path = "src/1-16a.rs"

[[bin]]
name = "1-16b"
path = "src/1-16b.rs"

[[bin]]
name = "1-17"
path = "src/1-17.rs"

[[bin]]
name = "1-18"
path = "src/1-18.rs"

[[bin]]
name = "1-19"
path = "src/1-19.rs"

[[bin]]
name = "1-20"
path = "src/1-20.rs"

[[bin]]
name = "1-21"
path = "src/1-21.rs"

[[bin]]
name = "1-22"
path = "src/1-22.rs"