[package]
name = "secuenciales"
version = "0.1.0"
edition = "2021"

[dependencies]
functions = {path = "../functions"}

[profile.release]
overflow-checks = true

[[bin]]
name = "1-5-1"
path = "src/1-5-1.rs"

[[bin]]
name = "1-5-2"
path = "src/1-5-2.rs"

[[bin]]
name = "1-5-3"
path = "src/1-5-3.rs"

[[bin]]
name = "1-5-4"
path = "src/1-5-4.rs"

[[bin]]
name = "1-5-5"
path = "src/1-5-5.rs"

[[bin]]
name = "1-5-6"
path = "src/1-5-6.rs"

[[bin]]
name = "1-5-7"
path = "src/1-5-7.rs"
