[package]
name = "subacciones"
version = "0.1.0"
edition = "2021"

[dependencies]
functions = {path = "../functions"}

[profile.release]
overflow-checks = true

[[bin]]
name = "1-37-1"
path = "src/1-37-1.rs"

[[bin]]
name = "1-37-2"
path = "src/1-37-2.rs"

[[bin]]
name = "1-37-3"
path = "src/1-37-3.rs"

[[bin]]
name = "1-37-4"
path = "src/1-37-4.rs"

[[bin]]
name = "1-37-5"
path = "src/1-37-5.rs"

[[bin]]
name = "1-37-6"
path = "src/1-37-6.rs"

[[bin]]
name = "1-37-7"
path = "src/1-37-7.rs"

[[bin]]
name = "1-37-8"
path = "src/1-37-8.rs"

[[bin]]
name = "1-37-9"
path = "src/1-37-9.rs"

[[bin]]
name = "1-37-10"
path = "src/1-37-10.rs"

[[bin]]
name = "1-37-11"
path = "src/1-37-11.rs"

[[bin]]
name = "1-37-12"
path = "src/1-37-12.rs"
